<resources>
    <string name="app_name">SensifyAware</string>
    <string name="loading">Loading…</string>
    <string name="api_failure">Api failure</string>
    <string name="internet_not_available">Please check your internet connection and try again</string>
    <string name="resource_not_found">Resource not found</string>
    <string name="server_conflict">Server conflicts</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="hi_user_name">Hi, %s.</string>
    <string name="tap_on_any_of_the_cards_to_begin_your_sensify_experience">Tap on any of the cards to begin your Sensify experience.</string>
    <string name="scentaware_evaluate">ScentAware Test</string>
    <string name="msg_scent_aware_evaluate">Assess your olfactory sense.</string>
    <string name="scent_aware_re_training">ScentAware training</string>
    <string name="scent_aware_re_training8">ScentAware re-training 8 scent kit</string>
    <string name="scent_aware_re_training16">ScentAware re-training 16 scent kit</string>
    <string name="msg_scent_aware_training">Re-test your lost sense of smell.</string>
    <string name="msg_scent_aware_re_training">Re-train your sense of smell</string>
    <string name="trace_aware_test">TraceAware Test</string>
    <string name="trace_aware">TraceAware</string>
    <string name="msg_trace_aware">Assess your fine-motor skills and visual memory.</string>
    <string name="audio_aware_test">AudioAware Test</string>
    <string name="audio_aware">AudioAware</string>
    <string name="msg_audio_aware">Access your verbal recall memory in AudioAware.</string>
    <string name="track_progress">Report</string>
    <string name="msg_track_progress">Track the results of the tests you’ve performed.</string>
    <string name="select_your_kit">Select your kit</string>
    <string name="_8_scent_test_kit">8-scent test kit</string>
    <string name="_16_scent_test_kit">16-scent test kit</string>
    <string name="_8_scent_test">8-Scent Test</string>
    <string name="_16_scent_test">16-Scent Test</string>
    <string name="begin">Begin</string>
    <string name="title_tutorial_scent_aware">How to perform an\nodor identification test?</string>
    <string name="odor_identification_test">Odor identification test</string>
    <string name="scan_the_qr_code_on_the_smell_test_tube">1. Scan the QR code on the smell test tube.</string>
    <string name="after_scanning_open_the_tube_and_smell_the_sample">2. After scanning, open the tube and smell the sample.</string>
    <string name="put_the_tube_in_lid_container">3. Put the tube in lid container.</string>
    <string name="rational_msg_camera_permission">Camera permission is required to scan QR code</string>
    <string name="rational_msg_storage_permission">Storage permission is required to scan QR code</string>
    <string name="odor_identification_test_of_">Odor identification test\n%s/%s</string>
    <string name="odor_differentiation_test_of_">Odor differentiation test\n%s/%s</string>
    <string name="odor_intensity_test_of_">Odor intensity test\n%s/%s</string>
    <string name="can_you_guess_what_the_sample_is">Can you guess what the sample is?</string>
    <string name="submit">Submit</string>
    <string name="send_code">Send verification Code</string>
    <string name="next">Next</string>
    <string name="please_select_different_tube">Please select different tube!</string>
    <string name="_continue">Continue</string>
    <string name="msg_checkpoint">You have reached a checkpoint. We will now re-test your olfactory senses. Continue the procedure, placing the tubes back in the foam tray after you’ve smelled them.</string>
    <string name="msg_2_checkpoint">Note : The following tests will include a 30 second timer.</string>
    <string name="checkpoint_reached">Checkpoint reached</string>
    <string name="done">Done</string>
    <string name="evaluation">Evaluation</string>
    <string name="between_13_and_16">Between 13 and 16</string>
    <string name="between_29_and_36">Between 29 and 36</string>
    <string name="normal">Normal</string>
    <string name="between_9_and_12">Between 9 and 12</string>
    <string name="between_22_and_28">Between 22 and 28</string>
    <string name="mild_anosmia">Mild anosmia</string>
    <string name="between_5_and_8">Between 5 and 8</string>
    <string name="between_14_and_21">Between 14 and 21</string>
    <string name="moderate_anosmia">Moderate anosmia</string>
    <string name="between_0_and_4">Between 0 and 4</string>
    <string name="between_0_and_13">Between 0 and 13</string>
    <string name="severe_anosmia">Severe anosmia</string>
    <string name="consult_your_doctor_for_a_more_comprehensive_examination_of_your_loss_of_olfactory_senses">Consult your doctor for a more comprehensive examination of your loss of olfactory senses.</string>
    <string name="try_traceaware">Try TraceAware</string>
    <string name="try_smell_re_training">Try Smell re-testing</string>
    <string name="you_answered_out_of_nquestions_correctly">Test completed successfully!\nYou scored %s out of 4 stars.</string>
    <string name="msg_3_checkpoint">Odor identification test\ncomplete!</string>
    <string name="msg_4_checkpoint_diff">We will now test your ability to differentiate between particular odors. Follow the instructions displayed on your screen to complete the test.</string>
    <string name="msg_5_checkpoint_intensity">We will now test your ability to differentiate between particular odors. Follow the instructions displayed on your screen to complete the test.</string>
    <string name="odor_diff_intro_text_1">Pick out the tubes from your ScentAware kit with the following symbols</string>
    <string name="odor_diff_intro_text_2">Smell the inhaler sticks, one at a time, and identify the one different among them.</string>
    <string name="odor_intensity_intro_text_2">Smell the inhaler sticks, one at a time, and identify the strongest smell among them.</string>
    <string name="odor_intensity_intro_text_1">Pick out the tubes from your ScentAware kit with the following symbols</string>
    <string name="odor_diff_msg">Select the option that you think is <b>different</b>.</string>
    <string name="odor_intensity_msg">Select the option that you think is the <b>strongest smell</b>.</string>
    <string name="could_not_ndifferentiate">Could not\ndifferentiate</string>
    <string name="title_tutorial_odor_diff_test">How to perform an odor\ndifferentiation test?</string>
    <string name="title_tutorial_odor_intensity_test">How to perform an odor\nintensity test?</string>
    <string name="title_tutorial_re_test">How to perform\na re-test?</string>
    <string name="trace_aware_questions">TraceAware\n%s/%s</string>
    <string name="traces_remaining">Traces remaining :</string>
    <string name="msg_trace_aware_checkpoint_1">You’ve traced all the symbols successfully!</string>
    <string name="msg_trace_aware_checkpoint_2">You’ve attempted the first set of questions successfully.</string>
    <string name="msg_trace_aware_checkpoint_3">You’ve cleared the second segment of the test successfully. We’ll now test your ability to recall from your memory.</string>
    <string name="msg_trace_aware_recall">Try to recall and trace the figure associated with the number displayed in the box.</string>
    <string name="msg_trace_aware_result">You’ve successfully completed the TraceAware and TraceAware-Recall Evaluation test.</string>
    <string name="try_smell_evaluation">Try Smell Evaluation</string>
    <string name="return_to_tests">Return to Tests</string>
    <string name="back_to_homescreen">Back to homescreen</string>
    <string name="average_response_time_">Average response time :\n%s sec</string>
    <string name="strWelcome">Welcome</string>
    <string name="strLoginID">Login ID</string>
    <string name="strFirsName">First Name</string>
    <string name="strLastName">Last Name</string>
    <string name="strEmail">E-mail</string>
    <string name="strPhone">Phone Number</string>
    <string name="strLogin">Login</string>
    <string name="strSignUp">Sign Up</string>
    <string name="strEnterEmail">Enter your email ID\nand password to register</string>
    <string name="strHiThere">Hi there!</string>
    <string name="strHowOld">How old are you?</string>
    <string name="strLowMemory">Are you experiencing a loss of \n memory?</string>
    <string name="strSetUp4Que">Are you currently prescribed to any medication? Select the options that may apply.</string>
    <string name="strStuffyNose">Are you experiencing a stuffy nose?</string>
    <string name="strSelectGender">Select your gender :</string>
    <string name="strNext">Next</string>
    <string name="strPassword">Password</string>
    <string name="msg_verification_screen">A verification code has been sent to your email. Please enter it to validate your account</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="verify">Verify</string>
    <string name="glance_aware">GlanceAware</string>
    <string name="trainings">Trainings</string>
    <string name="tests">Tests</string>
    <string name="reports">Reports</string>
    <string name="calendar">Calendar</string>
    <string name="verify_email">Verify Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="custom">Custom</string>
    <string name="scentaware_8_smell_training">ScentAware-8 Smell Training</string>
    <string name="scentaware_16_smell_training">ScentAware-16 Smell Training</string>
    <string name="scentaware_8_scent_test">ScentAware-8 Scent Test</string>
    <string name="scentaware_16_scent_test">ScentAware-16 Scent Test</string>
    <string name="the_brain_translates_sensory">The brain translates sensory information received through touch, taste, smell, vision and hearing while coordinating core body functions, consciously and unconsciously.\nThere are six cognitive domains:\n  • Memory and learning \n  • Language \n  • Executive functions \n  • Complex attention, \n  • Social cognition \n  • Perceptual and motor functions.</string>
    <string name="interpreting_health_">Interpreting Health\nThrough Senses.</string>
    <string name="the_ability_to_clearly_think">The ability to clearly think, learn, and remember — is an important component of performing everyday activities. Cognitive health is just one aspect of overall brain health.</string>
    <string name="traceaware_is_a_game_where_you">TraceAware is a game where you draw special symbols using your finger. The symbols, paired with numbers, are to be traced quickly and accurately. At first, you copy the symbols you see, but soon it turns into a memory test where you recall what you copied. It\'s a fun way to exercise your brain and hand coordination.</string>
    <string name="test_your_memory_and_motor_skills">Test your memory and motor skills.</string>
    <string name="word_listening_and_recognition">Word listening and recognition.</string>
    <string name="audioaware_is_a_word_listening_game">AudioAware is a word listening game. The device says words at an even pace through its speaker. Your job is to recognize those words from a list shown to you. It\'s all about recalling what you hear.</string>
    <string name="connect_faces_and_names_for_a_memory_challenge">Connect faces and names for a memory challenge.</string>
    <string name="glanceaware_is_an_associative_memory">GlanceAware is an Associative Memory task. You are shown faces with names and profession associated with the face. Once you are shown a set of faces and the names you are asked to recall. The task involves how you can process unrelated things.</string>
</resources>