<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/pageMargin"
        tools:context=".ui.auth.VerifyAccountActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:visibility="gone"
            app:title="@{@string/title_verify_email}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            style="@style/text_view_new"
            android:layout_marginTop="@dimen/normalMargin"
            android:fontFamily="@font/ws_bold"
            android:text="@string/verify_email"
            android:textSize="@dimen/_19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_msg"
            style="@style/text_view_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="@dimen/_22dp"
            android:text="@string/msg_verification_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/text_view_new"
                android:id="@+id/tx_verification"
                android:fontFamily="@font/ws_semi_bold"
                android:layout_marginTop="@dimen/extraLargeMargin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_msg"
                android:text="@string/verification_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etCode"
            style="@style/editTextNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:hint="@string/enter_code_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tx_verification"
            app:placeholderText="123456">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="6"
                android:paddingVertical="@dimen/largeMargin" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            style="@style/button_style_dark"
            android:layout_marginBottom="@dimen/largeMargin"
            android:text="@string/verify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>